using reactive form tut to get netlify form submission up to scratch

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,14 @@
     <script src="https://js.stripe.com/v3/"></script>
   </head>
   <body class="mat-typography">
+    <form name="feedbackForm" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="firstName" />
+      <input type="text" name="lastName" />
+      <input type="text" name="email" />
+      <input type="text" name="feedbackType" />
+      <input type="text" name="description" />
+      <input type="text" name="rating" />
+    </form>
     <app-root></app-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
