--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' 'unsafe-eval';"
+    />
+
     <meta charset="utf-8" />
     <title>NgSeptember</title>
     <base href="/" />
