--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-eval';"
+      content="script-src 'self' 'unsafe-eval' https://js.stripe.com; 'nonce-randomnoncevalue'"
     />
-
     <meta charset="utf-8" />
     <title>NgSeptember</title>
     <base href="/" />
