september 11 9:00am #neverforget #github #repo #employment

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- September 11 2023 #neverforget #github #linkedin-->
     <meta
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-eval' https://js.stripe.com; 'nonce-randomnoncevalue'"
